--- a/_config.yml
+++ b/_config.yml
@@ -8,21 +8,21 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Bai Pengcheng / Personal Website"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Bai Pengcheng"
+description              : &description "a first year phd student at Singapore Management University"
+url                      : https://ompengchengbai.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ompengchengbai/index"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Bai, Pengcheng"
+  avatar           : "profile1.png"
+  name             : "Bai Pengcheng"
   pronouns         : # example: "she/her"  
   bio              : "The ART of Efficiency"
   location         : "Singapore"
