--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "Bai Pengcheng / Personal Website"
 title_separator          : "-"
 name                     : &name "Bai Pengcheng"
 description              : &description "a first year phd student at Singapore Management University"
-url                      : https://ompengchengbai.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : https://ompengchengbai.github.io # the subpath of your site, e.g. "/blog"
+url                      : https://ompengchengbai.github.io/index # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : https://ompengchengbai.github.io/index # the subpath of your site, e.g. "/blog"
 repository               : "ompengchengbai/index"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
